# ncx_tools

./: .gitignore  README.md  backdoor.py  client.py  exploit.py  main.py  ncx_db.py  payload.py  requirements.txt  server_async.py  setup.py  setup.sh  shdwhashct.sh  therock.sh
bluetools/: hosts.py  password_auditor.py
bluetools/flag_overwriter/: go.mod  go.sum  main.go
bluetools/playbooks/: accept_icmp.yaml  disable_cron.yaml  drop_icmp.yaml  flags.yaml
bluetools/playbooks/artifacts/: banner
bluetools/ssh_canary/: config.txt  main_id_rsa  ssh_canary.py
exploits/: exploit.py
hardening/: pswd_change.py  therock.sh
hardening/ftp/: ftpHard.sh
hardening/passwords/: shdwhashct.sh
payloads/: persist.sh
payloads/revshell/: Makefile  README.md  go.mod  hello  main.c  main.go
payloads/sudo_trojan/: sudo
payloads/uncle_sam/: CMakeLists.txt  generate_payload.sh  uncle_sam_startup.sh
payloads/uncle_sam/src/: lib.c  main.c  util.c  util.h
playbooks/: audit.yaml  banner.yaml  open_ports.yaml  suid_binaries.yaml
policy_docs/: 10 USC 275.txt  18 USC 1030.txt  18 USC 1385.txt  31 USC 1535 - Economy Act.txt  42 USC Ch 68 - Disaster Relief.txt  A Risk-based Approach to National Cybersecurity.txt  CSC Final Report.txt  Critical Infrastructure Sectors.txt  Critical Infrastructure Security and Resilience.txt  DTM 17-007 - Interim Policy and Guidance for DSCIR.txt  EO 13636 - Improving Critical Infrastructure Cybersecurity.txt  EO 13800 - Strengthening the Cybersecurity of Federal Networks and Critical Infrastructure.txt  EO 14028 - Improving the NationтАЩs Cybersecurity.txt  Information Sharing.txt  PPD 21 - Critical Infrastructure Security and Resilience.txt  PPD 41 - United States Cyber Incident Coordination.txt  Protected Critical Infrastructure Information (PCII) Program.txt  Sector Risk Management Agencies.txt  The National Cyber Incident Response Plan.txt  Threat Response, Asset Response, Intelligence Support. National Cyber Incident Response Plan.txt  national_cyber_incident_response_plan.txt
redtools/: area_of_operations.py  bermuda.py  forward_observer.py  keyed_ssh_bomb.sh  ssh_bomb.sh
redtools/claymore/: Makefile  README.md  go.mod  main.go
